; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-smb.c_smb_cleanup.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-smb.c_smb_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ProtocolState = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.SMBSTUFF }
%struct.SMBSTUFF = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ProtocolState*)* @smb_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @smb_cleanup(%struct.ProtocolState* %0) #0 {
  %2 = alloca %struct.ProtocolState*, align 8
  %3 = alloca %struct.SMBSTUFF*, align 8
  store %struct.ProtocolState* %0, %struct.ProtocolState** %2, align 8
  %4 = load %struct.ProtocolState*, %struct.ProtocolState** %2, align 8
  %5 = getelementptr inbounds %struct.ProtocolState, %struct.ProtocolState* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  store %struct.SMBSTUFF* %6, %struct.SMBSTUFF** %3, align 8
  %7 = load %struct.SMBSTUFF*, %struct.SMBSTUFF** %3, align 8
  %8 = getelementptr inbounds %struct.SMBSTUFF, %struct.SMBSTUFF* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load %struct.SMBSTUFF*, %struct.SMBSTUFF** %3, align 8
  %15 = getelementptr inbounds %struct.SMBSTUFF, %struct.SMBSTUFF* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = call i32 @ntlmssp_cleanup(%struct.TYPE_6__* %16)
  br label %18

18:                                               ; preds = %13, %1
  ret void
}

declare dso_local i32 @ntlmssp_cleanup(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
